falta redirigir si no estas logeado

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<!-- <div class="col-md-6 mt-3" style="margin: 0 auto;">
+<div class="col-md-6 mt-3" style="margin: 0 auto;">
   <div class="card card-container">
     <img id="profile-img" src="//ssl.gstatic.com/accounts/ui/avatar_2x.png" class="prfile-img-card rounded-circle">
     <form *ngIf="!isLoggedIn" name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
@@ -28,5 +28,4 @@
       Te has logueado correctamente {{a}}
     </div>
   </div>
-</div> -->
-papadelta
+</div>
