--- a/src/app/components/serie-detail/serie-detail.component.html
+++ b/src/app/components/serie-detail/serie-detail.component.html
@@ -1,1 +1,15 @@
-<p>serie-detail works!</p>
+<div class="row">
+  <div class="col text-center">
+    <img src="https://image.tmdb.org/t/p/w220_and_h330_face{{currentSer.poster_path}}" class="card-img-top cardImg" alt="imagen">
+  </div>
+  <div class="col-3">
+    <h1>{{currentSer.name}}</h1>
+    <p><b>Título original:</b> {{currentSer.original_name}}<br>
+      <b>Fecha de Lanzamiento:</b>{{currentSer.first_air_date}}<br>
+        <b>Overview:</b> {{currentSer.overview}}<br>
+  </p>
+  </div>
+  <div class="col-3">
+
+  </div>
+</div>
