--- a/src/app/components/peliculas/peliculas.component.html
+++ b/src/app/components/peliculas/peliculas.component.html
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="row">
-    <div class="col" *ngFor="let mov of Movies">
+    <div class="col" *ngFor="let mov of Movies.results">
       <div class="card" style="width: 18rem;" >
-        <!-- <img src={{mov.poster_path}} class="card-img-top" alt="imagen"> -->
+        <img src="https://image.tmdb.org/t/p/w220_and_h330_face{{mov.poster_path}}" class="card-img-top cardImg" alt="imagen">
         <div class="card-body">
           <h5 class="card-title">{{mov.title}}</h5>
           <a [routerLink]="['/movies',mov.id]" class="btn btn-warning w-100">See more</a>
