--- a/src/app/components/series/series.component.html
+++ b/src/app/components/series/series.component.html
@@ -1,1 +1,14 @@
-<p>series works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col" *ngFor="let mov of Series.results">
+      <div class="card" style="width: 18rem;" >
+        <img src="https://image.tmdb.org/t/p/w220_and_h330_face{{mov.poster_path}}" class="card-img-top cardImg" alt="imagen">
+        <div class="card-body">
+          <h5 class="card-title">{{mov.title}}</h5>
+          <a [routerLink]="['/series',mov.id]" class="btn btn-warning w-100">See more</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</div>
