intetno reedirigir si no logged

--- a/src/app/components/pelicula-detail/pelicula-detail.component.html
+++ b/src/app/components/pelicula-detail/pelicula-detail.component.html
@@ -1,15 +1,15 @@
 <div class="row">
   <div class="col text-center">
-    <img src="https://image.tmdb.org/t/p/w220_and_h330_face{{currentMov.poster_path}}" class="card-img-top cardImg" alt="imagen">
+    <img
+      src="https://image.tmdb.org/t/p/w220_and_h330_face{{currentMov.poster_path}}"class="card-img-top cardImg"alt="imagen" />
   </div>
   <div class="col-3">
-    <h1>{{currentMov.title}}</h1>
-    <p><b>Título original:</b> {{currentMov.original_title}}<br>
-      <b>Fecha de Lanzamiento:</b>{{currentMov.release_date}}<br>
-        <b>Overview:</b> {{currentMov.overview}}<br>
-  </p>
+    <h1>{{ currentMov.title }}</h1>
+    <p>
+      <b>Título original:</b> {{ currentMov.original_title }} <br />
+      <b>Fecha de Lanzamiento:</b> {{ currentMov.release_date }} <br />
+      <b>Overview:</b> {{ currentMov.overview }} <br />
+    </p>
   </div>
-  <div class="col-3">
-
-  </div>
+  <div class="col-3"></div>
 </div>
