--- a/src/app/components/series/series.component.html
+++ b/src/app/components/series/series.component.html
@@ -4,7 +4,7 @@
       <div class="card" style="width: 18rem;" >
         <img src="https://image.tmdb.org/t/p/w220_and_h330_face{{mov.poster_path}}" class="card-img-top cardImg" alt="imagen">
         <div class="card-body">
-          <h5 class="card-title">{{mov.title}}</h5>
+          <h5 class="card-title">{{mov.name}}</h5>
           <a [routerLink]="['/series',mov.id]" class="btn btn-warning w-100">See more</a>
         </div>
       </div>
