--- a/src/app/components/series/series.component.html
+++ b/src/app/components/series/series.component.html
@@ -1,4 +1,10 @@
 <div class="container">
+  <div class="row pt-3 text-center">
+    <h3>Buscar</h3>
+    <div class="col pb-5">
+      <input type="text" name="titulo" id="titulo" class="me-3"> <a class="btn btn-outline-dark">Buscar</a>
+    </div>
+  </div>
   <div class="row">
     <div class="col" *ngFor="let mov of Series.results">
       <div class="card" style="width: 18rem;" >
