--- a/src/app/components/peliculas/peliculas.component.html
+++ b/src/app/components/peliculas/peliculas.component.html
@@ -1,13 +1,9 @@
 <div class="container">
-  <div class="row pt-3">
-    <h3>Buscar por:</h3>
-    <div class="col text-end">
-      <p>Titulo :</p>
-    </div>
+  <div class="row pt-3 text-center">
+    <h3>Buscar</h3>
     <div class="col pb-5">
-      <input type="text" name="titulo" id="titulo"> <a class="btn btn-outline-dark">Buscar</a>
+      <input type="text" name="titulo" id="titulo" class="me-3"> <a class="btn btn-outline-dark">Buscar</a>
     </div>
-  </div>
   <div class="row">
     <div class="col" *ngFor="let mov of Movies.results">
       <div class="card" style="width: 18rem;" >
